--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ github_username:  andreaja
 excerpt_separator: <!--more-->
 
 # Build settings
-highlighter: pygments
+highlighter: rouge
 markdown: kramdown
 
 gems:
