Make a hero section at the top of the mainpage

--- a/_config.yml
+++ b/_config.yml
@@ -9,6 +9,7 @@ timezone: Europe/Oslo
 permalink: /:year/:month/:day/:title/
 twitter_username: andreaja
 github_username:  andreaja
+bluesky_username: andreasjacobsen.com
 linkedin_username: andreasjacobsen
 excerpt_separator: <!--more-->
 
